--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const currentYear = new Date().getFullYear();
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="A beautiful blog for my best friend" />
+        <meta name="description" content="Ms.Aimee Laoshi's Blog" />
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="generator" content={Astro.generator} />
@@ -38,6 +38,7 @@ const currentYear = new Date().getFullYear();
                     <a href="/" class="text-lg font-sans hover:text-purple-700 transition-colors mr-6">Home</a>
                     <a href="/about" class="text-lg font-sans hover:text-purple-700 transition-colors mr-6">About Me</a>
                     <a href="/blog" class="text-lg font-sans hover:text-purple-700 transition-colors mr-6">Blog</a>
+                    <a href="/blog" class="text-lg font-sans hover:text-purple-700 transition-colors mr-6">Contact</a>
                 </div>
             </nav>
         </header>
