--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const currentYear = new Date().getFullYear();
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lora:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     </head>
-    <body class="text-gray-800 font-serif bg-slate-130">
+    <body class="text-gray-800 font-serif bg-slate-100">
         <header class="py-8 px-4 md:px-8 max-w-4xl mx-auto">
             <nav class="flex justify-between items-center">
                 <a href="/" class="text-2xl font-bold font-sans tracking-tight hover:text-purple-700 transition-colors">Her Blog</a>
@@ -38,7 +38,7 @@ const currentYear = new Date().getFullYear();
                     <a href="/" class="text-lg font-sans hover:text-purple-700 transition-colors mr-6">Home</a>
                     <a href="/about" class="text-lg font-sans hover:text-purple-700 transition-colors mr-6">About Me</a>
                     <a href="/blog" class="text-lg font-sans hover:text-purple-700 transition-colors mr-6">Blog</a>
-                    <a href="/blog" class="text-lg font-sans hover:text-purple-700 transition-colors mr-6">Contact</a>
+                    <a href="/contact" class="text-lg font-sans hover:text-purple-700 transition-colors mr-6">Contact</a>
                 </div>
             </nav>
         </header>
