--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,9 +33,8 @@ const currentYear = new Date().getFullYear();
     <body class="text-gray-800 font-serif bg-slate-100">
         <header class="py-8 px-4 md:px-8 max-w-4xl mx-auto">
             <nav class="flex justify-between items-center">
-                <a href="/" class="text-2xl font-bold font-sans tracking-tight hover:text-purple-700 transition-colors">Her Blog</a>
+                <a href="/" class="text-2xl font-bold font-sans tracking-tight hover:text-purple-700 transition-colors">Ms.Aimee Laoshi</a>
                 <div>
-                    <a href="/" class="text-lg font-sans hover:text-purple-700 transition-colors mr-6">Home</a>
                     <a href="/about" class="text-lg font-sans hover:text-purple-700 transition-colors mr-6">About Me</a>
                     <a href="/blog" class="text-lg font-sans hover:text-purple-700 transition-colors mr-6">Blog</a>
                     <a href="/contact" class="text-lg font-sans hover:text-purple-700 transition-colors mr-6">Contact</a>
