style: tweak fonts

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,8 +27,8 @@ const currentYear = new Date().getFullYear();
         <meta name="generator" content={Astro.generator} />
         <title>{title} |  Ms.Aimee Laoshi's Blog </title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lora:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
     </head>
     <body class="text-gray-800 font-serif bg-slate-100">
         <header class="py-8 px-4 md:px-8 max-w-4xl mx-auto">
@@ -100,10 +100,10 @@ const currentYear = new Date().getFullYear();
 
         <style is:global>
             body {
-                font-family: 'Lora', serif;
+                font-family: 'Source Sans Pro', sans-serif;
             }
             h1, h2, h3, h4, h5, h6, a {
-                font-family: 'Inter', sans-serif;
+                font-family: 'Playfair Display', serif;
             }
         </style>
     </body>
