--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,8 +13,8 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="Welcome to the Blog of Ms.Aimee Laoshi">
 	{/* This div is a container for welcome message.
 	*/}
-	<div class="bg-white rounded-lg shadow-xl p-8 md:p-16 mt-12 border-t-4 border-purple-600 text-center">
-		<h1 class="text-5xl font-bold tracking-tight">Welcome to the Blog of Ms.Aimee Laoshi</h1>
+	<div class="bg-white rounded-lg shadow-xl p-8 md:p-16 mt-12 border-t-4 border-purple-600 text-center mx-auto">
+		<h1 class="text-3xl md:text-3.5-xl font-extrabold tracking-wider mt-3 px-10 bg-clip-text leading-tight md:leading-normal sm:leading-tight">Welcome to the Blog of Ms.Aimee Laoshi</h1>
 		<p class="mt-4 text-xl text-gray-600">Thoughts, stories, and ideas by Ms.Aimee Laoshi.</p>
 
 		<div class="mt-8">
